.provarCaches/00D5f000005vwGkEAI/objects/rstk__soapi__c.object
<CustomObject>
    <fields>
        <fullName>rstk__soapi_ordpayamt1__c</fullName>
        <inlineHelpText>This field carries the amount to be used with the additional/alternate Order Payment Gateway #1</inlineHelpText>
        <label>Authorization/Payment Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ordpayamt2__c</fullName>
        <inlineHelpText>This field carries the amount to be used with the additional/alternate Order Payment Gateway #2</inlineHelpText>
        <label>Authorization/Payment Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ordpayamt3__c</fullName>
        <inlineHelpText>This field carries the amount to be used with the additional/alternate Order Payment Gateway #3</inlineHelpText>
        <label>Authorization/Payment Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ordpayid__c</fullName>
        <inlineHelpText>When using a &quot;payment processing&quot; gateway and Authorization and/or Payments are processed using SOAPI, this is the resulting Transaction ID from the given Service Provider</inlineHelpText>
        <label>Authorization/Payment Transaction ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ordpreauth__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this order has been authorized by the &quot;payment processing&quot; Service Provider used (e.g., PayPal)</inlineHelpText>
        <label>Order Has Been Pre-Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ordprepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this order has already been paid by the &quot;payment processing&quot; Service Provider used (e.g., PayPal)</inlineHelpText>
        <label>Order Has Been Pre-Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_otype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, will use this value to set Order Type on SO Header</inlineHelpText>
        <label>Order Type</label>
        <referenceTo>rstk__sootype__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_packageamt__c</fullName>
        <inlineHelpText>If set, this is used to set the SO Line Packaging Amount</inlineHelpText>
        <label>Packaging Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_phone__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter appropriate phone number for the override Contact.</inlineHelpText>
        <label>Ship To Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter a valid Project Charge Code for the SO Line Project being charged.</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_poline__c</fullName>
        <inlineHelpText>When record is inserted for a Inter- or Intra-Sytem Purchase Order, spawning the add of a Sales Order, this is originating PO Line</inlineHelpText>
        <label>PO Line</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_prevalidate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates a Contract-related SO has been validated against the given Sales Contract.</inlineHelpText>
        <label>Pre-Validate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_price__c</fullName>
        <inlineHelpText>When set, this will override any other price look-ups and will be used as the Unit Price on the SO Line</inlineHelpText>
        <label>Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter appropriate valid active Rootstock Price Book to be used.  When setting this field, you need to select an appopriate option in the &apos;Price Book Option&apos; field.</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>rstk__sopbk__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_pricebookopt__c</fullName>
        <inlineHelpText>When using Rootstock Price Book, enter applicable option.  Options are

Write to SO Header (written to SO Header and applies to all lines)
Write to SO Line (written to SO Line and only applies to the given line)</inlineHelpText>
        <label>Price Book Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Write to SO Header</fullName>
                    <default>true</default>
                    <label>Write to SO Header</label>
                </value>
                <value>
                    <fullName>Write to SO Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__soapi_pricingcust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this is used as the SO Pricing Customer. Note that value needs to be a valid Related Customer for the given SO Customer. IMPORTANT:  When set, pricing look-ups will be based on the Pricing Customer rather than the SO Customer.</inlineHelpText>
        <label>Pricing Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Pricing Customer)</relationshipLabel>
        <relationshipName>soapis2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this record has been successfully processed</inlineHelpText>
        <label>Record Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_prodname__c</fullName>
        <inlineHelpText>When a value is entered here, a lookup is done to the Customer Product record to derive the Rootstock Product Number.</inlineHelpText>
        <label>Customer Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_product__c</fullName>
        <inlineHelpText>The RS Product being ordered on the given SO Line</inlineHelpText>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this is the Default Project set on the SO Header</inlineHelpText>
        <label>Default Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The SO Line&apos;s Project value.  If not specified, the Home Project for the given Inventory Division will be used.</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Project)</relationshipLabel>
        <relationshipName>soapis_project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_qtyorder__c</fullName>
        <inlineHelpText>The order quantity for the SO Line being added or changed</inlineHelpText>
        <label>Order Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_quote__c</fullName>
        <inlineHelpText>This field provides a reference field where the source quotation can be recorded on the sales order header.</inlineHelpText>
        <label>Quote Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_reqdate__c</fullName>
        <inlineHelpText>Used to update the SO Line Required Date (which is the date used for inventory &quot;readiness&quot;).  This field may only be used to change existing lines (not in new mode) and only when allowed by the Sales Control setting &quot;Manual Control Over SO Line Dates&quot;.</inlineHelpText>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_retry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Once a SOAPI record is saved, if there is an error, once the error condition is corrected, check this checkbox so the the processing engine knows to retry processing this record.</inlineHelpText>
        <label>Retry Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_revcancell__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this checkbox to reverse the cancellation of a cancelled Sales Order</inlineHelpText>
        <label>Reverse Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_revcloseorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In order to re-open a closed Sales Order, use API Mode = Change Header and check this checkbox and the specified Sales Order will be re-opened.</inlineHelpText>
        <label>Reverse Sales Order Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_revlinecancel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If a Sales Order Line has been canceled and now you wish to &quot;un-cancel&quot; it, check checkbox and the SO Line specified will be re-opened.</inlineHelpText>
        <label>Reverse Cancel Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_salesacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this is the Sales Account (aka Revenue Account) used on the resulting SO Line. If not set, the normal default logic is used.</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Sales Account)</relationshipLabel>
        <relationshipName>soapis_salesacct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_salesdiv__c</fullName>
        <inlineHelpText>The Sales Division in which the given SO is added under</inlineHelpText>
        <label>Sales Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_schdate__c</fullName>
        <inlineHelpText>Used to update the SO Line Scheduled Ship Date (the date when the product is to be shipped).  This field may only be used to change existing lines (not in new mode) and only when allowed by the Sales Control setting “Manual Control Over SO Line Dates&quot;.</inlineHelpText>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shiplocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this value will be used to set the Ship-From Location ID on the given SO Line.  If not set, the normal default logic for setting Ship-From Location ID will be used.</inlineHelpText>
        <label>Issue From Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shiplocnum__c</fullName>
        <inlineHelpText>When set, value is used to set Ship-From Location No on the SO Line. If not set, the normal default logic for setting Ship-From Loc No is used. Note that if using pre-defined Location Numbers in the given Site, must be valid Location No for Loc ID used.</inlineHelpText>
        <label>Issue From Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shipsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, this value will be used to set the Ship-From Site on the given SO Line. If not set, the normal default logic for setting Ship-From Site will be used.</inlineHelpText>
        <label>Issue From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shiptoaddr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, value is used to set the Ship To Address on SO Header. If not set, the standard default logic is used for setting the value.</inlineHelpText>
        <label>Ship To Address</label>
        <referenceTo>rstk__socaddr__c</referenceTo>
        <relationshipLabel>Sales Order APIs (Ship To Address)</relationshipLabel>
        <relationshipName>soapis_shiptoaddr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shipvia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If set, this overrides the normal default logic for setting Header Shipment Method.  Note that the relationship between the given carrier and the Shipment Method used must exist.</inlineHelpText>
        <label>Shipment Method (Header)</label>
        <referenceTo>rstk__syshipviatype__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_shipvia_useonline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked then the value in the SOAPI Carrier field will be used to populate the sales order line ship-via field rather than the sales order header ship-via field.</inlineHelpText>
        <label>Use ShipVia on Sales Order Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_socust__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Customer used on the Sales Order being created.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstk__socust__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_sogateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Payment Gateway used to authorize and/or pay via the &quot;payment processing&quot; Service Provider (e.g., PayPal)</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>rstk__sogateway__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_sohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When referencing an existing Sales Order, enter a valid SO here</inlineHelpText>
        <label>Sales Order Header</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_soline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When referencing an existing Sales Order Line, enter a valid SO Line here</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_soprod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The RS Product being ordered on the given SO Line</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When adding a SO Line and this is set, the Covered Item field on the SO Line will be set to this value.  Must be a valid Shipped Item Warranty record.</inlineHelpText>
        <label>Covered Item</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_srvcostbw__c</fullName>
        <inlineHelpText>Custom</inlineHelpText>
        <label>Service CPC Rate - Mono</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_srvcostcol__c</fullName>
        <inlineHelpText>Custom</inlineHelpText>
        <label>Service CPC Rate - Color</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_srvcostscan__c</fullName>
        <inlineHelpText>Custom</inlineHelpText>
        <label>Service CPC Rate - Scan</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ssysdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Division in which the given SO is added under</inlineHelpText>
        <label>Sales Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>salessoapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_state__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired State or Province here.</inlineHelpText>
        <label>Ship To State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_stname__c</fullName>
        <inlineHelpText>When &apos;Add Ship To Address Override&apos; is checked (set to TRUE), enter Name of Address desired.</inlineHelpText>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Manufacturing User that &quot;caused&quot; the insert of this record (if spawned from another process or inserted directly).</inlineHelpText>
        <label>Manufacturing User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the VAT Class to be used on this Sales Order Line.</description>
        <inlineHelpText>This field contains the VAT Class to be used on this Sales Order Line.</inlineHelpText>
        <label>VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>Sales_Order_APIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_taxamount__c</fullName>
        <inlineHelpText>This field carries the tax amount to be used on the Sales Order Line being added (or updated) via this transaction record.  This amount is used in place of any system calculated amount that would normally be used.</inlineHelpText>
        <label>Tax Override Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_taxexempt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the given Product or Customer is not tax exempt but it is desired that this Sales Order Line is not to be taxed, set this field to checked.</inlineHelpText>
        <label>Tax Exempt (Resale)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_taxloc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Given that tax rates are based on the location receiving the goods, when overriding Ship-To Address, enter appropriate predefined Tax Location here.</inlineHelpText>
        <label>Ship To Tax Location</label>
        <referenceTo>rstk__sotax__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_taxoverride__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used to indicate that the Sales Order Line being added (or updated) via this transaction record will be given an override tax amount.</inlineHelpText>
        <label>Override Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_taxoverride_off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is used to indicate that the Sales Order Line being updated via this transaction record is to have its Tax Override removed.</inlineHelpText>
        <label>Remove Override Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If set, this overrides the normal default logic for setting Payment Terms</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>rstk__syterms__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_throwerrors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Instead of updating the error field reject changes and throw error exceptions</description>
        <inlineHelpText>When checked, rather than updating the error field, any failure/error will throw error exceptions</inlineHelpText>
        <label>Throw Errors as Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_unfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When adding a SO Line for a Product and the default for said Product is to add at a Firm status, by checking this checkbox, it will override said logic and add the SO Line at a Unfirm status.</inlineHelpText>
        <label>Un-Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_updatecustfields__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When using customer custom fields, if you wish to override the existing value, check checkbox.  Applies to Change Header or Change Line API Mode.  Enter override value in desired Custom Field field.</inlineHelpText>
        <label>Update (overwrite) Custom Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_upgroup__c</fullName>
        <inlineHelpText>When adding a SO &amp; multiple lines, because the user doesn&apos;t know what the SO # will be for additional lines to be added, enter a &quot;Upload Group&quot; on each line being added in a batch.  This allows the code to understand they are to be added to the same SO.</inlineHelpText>
        <label>Upload Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_useconfig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the line is to be Configured This Time</description>
        <inlineHelpText>When adding a SO Line for a Stock Product and this field is checked, the SO Line will be treated like a Configured Product, generating a Work Order when the SO Line is firmed.</inlineHelpText>
        <label>Config This Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_usemfgasresp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When processing an SOAPI that affects the sales order header then if this flag is true then the Responsible User field on the sales order header (SOHDR_RESP) will be set to the value of SOAPI_SYUSR.</inlineHelpText>
        <label>Use Mfg. User as Order Responsible User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_user__c</fullName>
        <inlineHelpText>Can be set to the User Number of the Mfg User creating the given record</inlineHelpText>
        <label>User Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_usestock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the Configured Product to be treated as Stock this time</description>
        <inlineHelpText>When adding a SO Line for a Configured Product and field is checked, the SO Line will be treated like a Stock Product &amp; a Work Order will NOT be generated when SO Line is firmed (the assumption being that &quot;stock this time&quot; is due to having inventory OH.</inlineHelpText>
        <label>Stock This Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ustath__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When set, will use this value to set User Status on SO Header</inlineHelpText>
        <label>User Status (Header)</label>
        <referenceTo>rstk__soustat__c</referenceTo>
        <relationshipLabel>Sales Order APIs</relationshipLabel>
        <relationshipName>soapish</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_ustatl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>User Status (Line)</label>
        <referenceTo>rstk__soustat__c</referenceTo>
        <relationshipLabel>Sales Order APIs (User Status (Line))</relationshipLabel>
        <relationshipName>soapisl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerodiscpct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If other records (Customer Master, Product pricing records, etc.) have a default discount % defined for a SO Line, check this checkbox if no discount is to be derived (will be set to 0).</inlineHelpText>
        <label>Zero Discount Pct.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerofreightamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Freight Amount on the specified SO Line will be set to $0.</inlineHelpText>
        <label>Zero Freight Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerohandlingam__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Handling Amount on the specified SO Line will be set to $0.</inlineHelpText>
        <label>Zero Handling Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerohdiscpct__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If other records (e.g., Customer Master) have a default discount % defined for a SO Header, check this checkbox if no discount is to be derived (will be set to 0).</inlineHelpText>
        <label>Zero Header Discount Pct.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerohdrfreightamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Freight Amount entered or rolled up from SO Lines will be set to $0.</inlineHelpText>
        <label>Zero Header Freight Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerohdrhandlingamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Handling Amount entered or rolled up from SO Lines will be set to $0.</inlineHelpText>
        <label>Zero Header Handling Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zerohdrpackageamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Packaging Amount entered or rolled up from SO Lines will be set to $0.</inlineHelpText>
        <label>Zero Header Packaging Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zeropackageamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, any Packaging Amount on the specified SO Line will be set to $0.</inlineHelpText>
        <label>Zero Packaging Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__soapi_zip__c</fullName>
        <inlineHelpText>When overriding Ship-To Address, enter desired Zip Code or Postal Code here.</inlineHelpText>
        <label>Ship To Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Sales Order API</label>
    <listViews>
        <fullName>MS_SO_API</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>rstk__soapi_mode__c</columns>
        <columns>rstk__soapi_socust__c</columns>
        <columns>rstk__soapi_processed__c</columns>
        <columns>rstk__soapi_soline__c</columns>
        <columns>rstk__soapi_error__c</columns>
        <columns>rstk__soapi_async__c</columns>
        <columns>rstk__soapi_orderno__c</columns>
        <columns>rstk__soapi_retry__c</columns>
        <columns>rstk__soapi_soprod__c</columns>
        <columns>rstk__soapi_invdiv__c</columns>
        <columns>rstk__soapi_project__c</columns>
        <columns>rstk__soapi_throwerrors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__soapi_orderno__c</field>
            <operation>contains</operation>
            <value>xi3y</value>
        </filters>
        <label>MS_SO-API</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SOAPI_AC</fullName>
        <columns>NAME</columns>
        <columns>rstk__soapi_mode__c</columns>
        <columns>rstk__soapi_socust__c</columns>
        <columns>rstk__soapi_processed__c</columns>
        <columns>rstk__soapi_soline__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__soapi_error__c</columns>
        <columns>rstk__soapi_async__c</columns>
        <columns>rstk__soapi_orderno__c</columns>
        <columns>rstk__soapi_retry__c</columns>
        <columns>rstk__soapi_soprod__c</columns>
        <columns>rstk__soapi_invdiv__c</columns>
        <columns>rstk__soapi_project__c</columns>
        <columns>rstk__soapi_throwerrors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>SOAPI_AC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_SO_API</fullName>
        <columns>NAME</columns>
        <columns>rstk__soapi_mode__c</columns>
        <columns>rstk__soapi_socust__c</columns>
        <columns>rstk__soapi_processed__c</columns>
        <columns>rstk__soapi_soline__c</columns>
        <columns>rstk__soapi_error__c</columns>
        <columns>rstk__soapi_async__c</columns>
        <columns>rstk__soapi_orderno__c</columns>
        <columns>rstk__soapi_retry__c</columns>
        <columns>rstk__soapi_soprod__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__soapi_invdiv__c</columns>
        <columns>rstk__soapi_project__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__soapi_throwerrors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>SO-API</label>
        <language>en_US</language>
    </listViews>
</CustomObject>